# Phoenix

./: .clangd  .gitignore  .gitmodules  .mcp.json  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Directory.Build.props  Phoenix.sln  README.md  build.ps1  build_apps.ps1  imgui.ini  premake5.lua  vcpkg.json  vcpkg.json.comment
apps/Phoenix.Editor/: CMakeLists.txt
apps/PhoenixRTS2/: CMakeLists.txt  imgui.ini
apps/PhoenixRTS2/Data/: DefaultSession.json
apps/PhoenixRTS2/src/: PhoenixRTS2Module.cpp  PhoenixRTS2Module.h
src/Phoenix.App.Dev/: AutoSyncComponentHandler.h  CMakeLists.txt  SDL3App.cpp  SDL3App.h  SDL3AppServiceModule.cpp  SDL3AppServiceModule.h  SDL3ImGuiService.cpp  SDL3ImGuiService.h  SDL3PlatformService.cpp  SDL3PlatformService.h  SDL3Renderer.cpp  SDL3Renderer.h  SDL3ResourceManager.cpp  SDL3ResourceManager.h  Scene.cpp  Scene.h  SceneComponentHandler.h  SceneManager.cpp  SceneManager.h
src/Phoenix.App.Dev/Components/: CameraComponent.h  Circle2DComponent.h  LineMesh2DComponent.h  SceneComponent.h
src/Phoenix.App.Dev/Resources/: LineMesh2D.cpp  LineMesh2D.h  RenderTarget2D.h  Texture2D.cpp  Texture2D.h
src/Phoenix.App.Dev/Viewport/: ImGuiViewport.cpp  ImGuiViewport.h  SceneViewport.cpp  SceneViewport.h
src/Phoenix.Build.LuaGen/: CMakeLists.txt
src/Phoenix.Editor.ImGui/: CMakeLists.txt
src/Phoenix.Editor.ImGui/Controls/: ImGuiControls.h
src/Phoenix.Editor.ImGui/Docking/: ImGuiDockManager.cpp  ImGuiDockManager.h
src/Phoenix.Editor.ImGui/Menus/: ImGuiMenuRenderer.h
src/Phoenix.Editor.ImGui/Style/: EditorStyle.cpp  EditorStyle.h
src/Phoenix.Editor.ImGui/Widgets/: EditorWidgetContext.cpp  ImGuiWidget.cpp  ImGuiWidget.h  ImGuiWidgetContext.h  ImGuiWidgetFactory.cpp  ImGuiWidgetFactory.h  MainFrameWidget.h  SessionEditorWidget.h
src/Phoenix.Editor.PropertyGrid/: CMakeLists.txt
src/Phoenix.Editor.PropertyGrid/Model/: ModelDescriptor.cpp  ModelDescriptor.h  ModelDescriptorBuilder.h  PropertyDescriptor.cpp  PropertyDescriptor.h  PropertyDescriptorBuilder.h  PropertyValueAccessor.h
src/Phoenix.Parallel/: CMakeLists.txt  InlineCallable.h  MPMCQueue.h  NullExecutor.h  Task.cpp  Task.h  TaskHandle.cpp  TaskHandle.h  TaskPoolExecutor.cpp  TaskPoolExecutor.h  TaskQueue.cpp  TaskQueue.h  ThreadPool.cpp  ThreadPool.h
src/Phoenix.Parallel.enkiTS/: CMakeLists.txt  EnkiTSExecutor.cpp  EnkiTSExecutor.h
src/Phoenix.Profilers.Structured/: CMakeLists.txt  StructuredProfiler.cpp  StructuredProfiler.h
src/Phoenix.Profilers.Tracy/: CMakeLists.txt  TracyProfiler.cpp  TracyProfiler.h
src/Phoenix.Renderer.SDL3/: CMakeLists.txt  SDL3Context.cpp  SDL3Context.h  SDL3Renderer.cpp  SDL3Renderer.h  SDL3ResourceManager.cpp  SDL3ResourceManager.h
src/Phoenix.Scene.EnTT/: AutoSyncComponentHandler.h  CMakeLists.txt  EnTTEntitySyncHandler.cpp  EnTTEntitySyncHandler.h  EnTTScene.cpp  EnTTScene.h  IEnTTSceneLayer.h  Scene.cpp  Scene.h  SceneComponentHandler.h  SceneManager.cpp  SceneManager.h
src/Phoenix.Scene.EnTT/Components/: CameraComponent.h  LineMesh2DComponent.cpp  LineMesh2DComponent.h  SceneComponent.h
src/Phoenix.Sim/: Actions.cpp  Actions.h  CMakeLists.txt  Color.cpp  Color.h  Config.cpp  Config.h  Corners.h  Delegates.cpp  Delegates.h  FPSCalc.h  Features.cpp  Features.h  Hashing.h  InlineCallable.h  Logging.h  MortonCode.h  Name.cpp  Name.h  Parallel.h  Platform_Posix.cpp  Platform_Win32.cpp  Profiling.h  Random.h  Serialization.cpp  Serialization.h  Session.cpp  Session.h  SessionFwd.h  WorldTaskQueue.h  Worlds.cpp  Worlds.h  WorldsFwd.h  pch.cpp  pch.h
src/Phoenix.Sim.Blackboard/: CMakeLists.txt  FeatureBlackboard.cpp  FeatureBlackboard.h  FixedBlackboard.cpp  FixedBlackboard.h  FixedBlackboard.inl
src/Phoenix.Sim.Debug/: CMakeLists.txt  Debug.cpp  Debug.h  DebugShape.h  FeatureDebug.cpp  FeatureDebug.h
src/Phoenix.Sim.ECS/: ArchetypeDefinition.h  ArchetypeHandle.h  ArchetypeList.cpp  ArchetypeList.h  ArchetypeManager.cpp  ArchetypeManager.h  CMakeLists.txt  CommandBuffer.h  Component.h  ECSCommands.h  Entity.cpp  Entity.h  EntityId.h  EntityQuery.h  FeatureECS.cpp  FeatureECS.h  FixedEntityList.h  FixedGroupList.h  FixedTagList.h  JobBatch.h  JobScheduler.cpp  JobScheduler.h  System.h  SystemJob.h  TransformComponent.h
src/Phoenix.Sim.LDS/: CMakeLists.txt  FeatureLDS.cpp  FeatureLDS.h  FeatureLDS.inl  LDSCatalog.h  LDSCatalogQueryContext.cpp  LDSCatalogQueryContext.h  LDSFeatureQueryContext.h  LDSObjectModel.h  LDSQueryContext.cpp  LDSQueryContext.h  LDSQueryContext.inl  LDSRecord.cpp  LDSRecord.h  LDSRecordQueryFlags.h  LDSValue.cpp  LDSValue.h
src/Phoenix.Sim.LDS/Json/: JsonCatalogBuilderBase.cpp  JsonCatalogBuilderBase.h  JsonCatalogObjectBuilder.cpp  JsonCatalogObjectBuilder.h  JsonCatalogTypeBuilder.h  JsonDataSource.cpp  JsonDataSource.h
src/Phoenix.Sim.Lua/: CMakeLists.txt  DLLExport.h  FeatureLua.cpp  FeatureLua.h  LuaWasmEnvironment.cpp  LuaWasmEnvironment.h  Phoenix.d.lua
src/Phoenix.Sim.Mesh/: CMakeLists.txt  Mesh2.h  Mesh2.inl  MeshPath.h
src/Phoenix.Sim.Nav/: CMakeLists.txt  FeatureNavigation.cpp  FeatureNavigation.h
src/Phoenix.Sim.Physics/: BodyComponent.h  CMakeLists.txt  FeaturePhysics.cpp  FeaturePhysics.h  PhysicsSystem.cpp  PhysicsSystem.h
src/Phoenix.Sim.RTS/: .keep  CMakeLists.txt
src/Phoenix.Sim.Script/: CMakeLists.txt  FeatureScript.cpp  FeatureScript.h  WasmEnvironment.cpp  WasmEnvironment.h  WasmRuntime.cpp  WasmRuntime.h  WasmUtility.cpp  WasmUtility.h
src/Phoenix.Sim.Steering/: CMakeLists.txt  FeatureSteering.cpp  FeatureSteering.h  ScriptBindings.cpp  ScriptBindings.h  SteeringComponent.h  SteeringSystem.cpp  SteeringSystem.h
src/Phoenix.Sim.Strings/: CMakeLists.txt  FeatureString.cpp  FeatureString.h  StringService.cpp  StringService.h  StringTable.h
src/Phoenix.Sim.Tasks/: CMakeLists.txt  FeatureTask.cpp  FeatureTask.h  TaskBase.h  TaskList.cpp
src/Phoenix.Tools.APIGen/: CMakeLists.txt  PhoenixAPIGen.cpp
src/Phoenix.Tools.LuaGen/: CMakeLists.txt  PhoenixLuaGen.cpp
src/Phoenix.UI.ImGui.SDL3/: CMakeLists.txt  SDL3ImGuiService.cpp  SDL3ImGuiService.h
(+1783 files in other folders)
