# ── Phoenix.Tools.APIGen ──────────────────────────────────────────────────────────────
#
# Native executable that walks the live TypeRegistry and emits:
#   api.json — machine-readable description of all reflected types, properties,
#              methods, and constructors.
#
# Downstream consumers (Phoenix.Tools.WasmGen, Phoenix.Tools.LuaGen, tooling) use api.json to
# generate host_api.h, lua_bridge.c, IDE autocomplete stubs, etc.
#
# Linking model:
#   WHOLEARCHIVE forces every .obj from each static library to be included so
#   every PHX_DEFINE_TYPE static initializer runs and populates the TypeRegistry.

add_executable(Phoenix.Tools.APIGen
    "${CMAKE_CURRENT_LIST_DIR}/PhoenixAPIGen.cpp"
)

target_include_directories(Phoenix.Tools.APIGen PRIVATE
    "${CMAKE_SOURCE_DIR}/src"
)

target_link_libraries(Phoenix.Tools.APIGen PRIVATE
    Phoenix.Sim.RTS
    Phoenix.Sim.Physics
    Phoenix.Sim.Steering
    Phoenix.Sim.Blackboard
    Phoenix.Sim.Debug
    Phoenix.Sim.Tasks
    Phoenix.Sim.ECS
    Phoenix.Sim.LDS
    Phoenix.Sim.Nav
    Phoenix.Sim.Strings
    Phoenix.Sim
    Phoenix
    nlohmann_json::nlohmann_json
)

if(MSVC)
    target_link_options(Phoenix.Tools.APIGen PRIVATE
        /WHOLEARCHIVE:$<TARGET_FILE:Phoenix.Sim.RTS>
        /WHOLEARCHIVE:$<TARGET_FILE:Phoenix.Sim.Physics>
        /WHOLEARCHIVE:$<TARGET_FILE:Phoenix.Sim.Steering>
        /WHOLEARCHIVE:$<TARGET_FILE:Phoenix.Sim.Blackboard>
        /WHOLEARCHIVE:$<TARGET_FILE:Phoenix.Sim.Debug>
        /WHOLEARCHIVE:$<TARGET_FILE:Phoenix.Sim.Tasks>
        /WHOLEARCHIVE:$<TARGET_FILE:Phoenix.Sim.ECS>
        /WHOLEARCHIVE:$<TARGET_FILE:Phoenix.Sim.LDS>
        /WHOLEARCHIVE:$<TARGET_FILE:Phoenix.Sim.Nav>
        /WHOLEARCHIVE:$<TARGET_FILE:Phoenix.Sim.Strings>
        /WHOLEARCHIVE:$<TARGET_FILE:Phoenix.Sim>
    )
elseif(APPLE)
    target_link_options(Phoenix.Tools.APIGen PRIVATE
        -Wl,-force_load,$<TARGET_FILE:Phoenix.Sim.RTS>
        -Wl,-force_load,$<TARGET_FILE:Phoenix.Sim.Physics>
        -Wl,-force_load,$<TARGET_FILE:Phoenix.Sim.Steering>
        -Wl,-force_load,$<TARGET_FILE:Phoenix.Sim.Blackboard>
        -Wl,-force_load,$<TARGET_FILE:Phoenix.Sim.Debug>
        -Wl,-force_load,$<TARGET_FILE:Phoenix.Sim.Tasks>
        -Wl,-force_load,$<TARGET_FILE:Phoenix.Sim.ECS>
        -Wl,-force_load,$<TARGET_FILE:Phoenix.Sim.LDS>
        -Wl,-force_load,$<TARGET_FILE:Phoenix.Sim.Nav>
        -Wl,-force_load,$<TARGET_FILE:Phoenix.Sim.Strings>
        -Wl,-force_load,$<TARGET_FILE:Phoenix.Sim>
    )
else()
    target_link_options(Phoenix.Tools.APIGen PRIVATE
        -Wl,--whole-archive
        $<TARGET_FILE:Phoenix.Sim.RTS>
        $<TARGET_FILE:Phoenix.Sim.Physics>
        $<TARGET_FILE:Phoenix.Sim.Steering>
        $<TARGET_FILE:Phoenix.Sim.Blackboard>
        $<TARGET_FILE:Phoenix.Sim.Debug>
        $<TARGET_FILE:Phoenix.Sim.Tasks>
        $<TARGET_FILE:Phoenix.Sim.ECS>
        $<TARGET_FILE:Phoenix.Sim.LDS>
        $<TARGET_FILE:Phoenix.Sim.Nav>
        $<TARGET_FILE:Phoenix.Sim.Strings>
        $<TARGET_FILE:Phoenix.Sim>
        -Wl,--no-whole-archive
    )
endif()

set_property(TARGET Phoenix.Tools.APIGen PROPERTY FOLDER "Tools")

# ── api.json generation ────────────────────────────────────────────────────────
#
# Run Phoenix.Tools.APIGen after it is built to dump api.json into the build root.
# Downstream steps (Phoenix.Tools.WasmGen, Phoenix.Tools.LuaGen, etc.) depend on this target
# so that api.json is always up-to-date before code generation begins.
#
# PHOENIX_API_JSON is cached as an INTERNAL variable so that other
# CMakeLists.txt files can reference the path without hard-coding it.

set(PHOENIX_API_JSON "${CMAKE_BINARY_DIR}/api.json" CACHE INTERNAL
    "Path to the api.json file generated by Phoenix.Tools.APIGen")

add_custom_command(
    OUTPUT  "${PHOENIX_API_JSON}"
    COMMAND $<TARGET_FILE:Phoenix.Tools.APIGen> --output "${PHOENIX_API_JSON}"
    DEPENDS Phoenix.Tools.APIGen
    COMMENT "Phoenix.Tools.APIGen: writing ${PHOENIX_API_JSON}"
)

add_custom_target(GenerateAPI ALL
    DEPENDS "${PHOENIX_API_JSON}"
)

set_property(TARGET GenerateAPI PROPERTY FOLDER "Tools")
